# magi

./: .env.example  Makefile  README.md  docker-compose.aura.yml  docker-compose.local.yml  docker-compose.yml
backend/: Dockerfile  config.py  main.py  pyproject.toml
backend/agents/: arbiter.py  axiom.py  base.py  forge.py  llm_providers.py  prism.py
backend/knowledge/: document_parser.py  embeddings.py  graph.py  loader.py  schema.py
backend/knowledge/seed_data/axiom/: chemical_propulsion.md  lunar_science.md  mars_transit.md  nuclear_propulsion.md  radiation_exposure.md  robotic_exploration.md
backend/knowledge/seed_data/forge/: artemis_costs.md  contracting_models.md  iterative_development.md  launch_vehicles.md  nasa_budget.md  starship_development.md
backend/knowledge/seed_data/prism/: apollo_effect.md  exploration_imperative.md  international_cooperation.md  public_perception.md  scifi_influence.md  space_race.md
backend/models/: schemas.py
backend/orchestrator/: consensus.py  deliberation.py
cli/: pyproject.toml
cli/triad_cli/: __init__.py  main.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.js
frontend/src/: main.js  style.css
frontend/src/lib/: animations.js  websocket.js
tests/: test_consensus.py
